[package]
name = "ttyinject-rs"
version = "0.1.0"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Linux LPE via TIOCSTI tty injection"
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/ttyinject-rs"
license = "MIT"
keywords = ["exploit", "linux", "tty", "injection", "ioctl", "TIOCSTI"]
categories = [
  "security",
  "command-line-utilities",
]
exclude = [
  ".cargo/*",
  ".github/*",
  ".img/*",
  ".gitignore",
  ".taplo.toml",
  "tests/*",
]

[dependencies]
anyhow = "1.0"
libc = "0.2"

# [build-dependencies]

# [dev-dependencies]

# [[test]]
# name = "tests"
# path = "tests/main.rs"
# harness = false

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev]
debug = false

[lints]
workspace = true

[workspace.lints.rust]
missing_docs = { level = "warn" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
# allow some lints
blanket_clippy_restriction_lints = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
arbitrary_source_item_ordering = "allow"
implicit_return = "allow"
question_mark_used = "allow"
print_stdout = "allow"
print_stderr = "allow"
min_ident_chars = "allow"
single_char_lifetime_names = "allow"
impl_trait_in_params = "allow"
missing_inline_in_public_items = "allow"
single_call_fn = "allow"
separated_literal_suffix = "allow"
default_numeric_fallback = "allow"
# use_debug = "allow"
# string_slice = "allow"
# indexing_slicing = "allow"
# doc_markdown = "allow"
# missing_errors_doc = "allow"
# multiple_crate_versions = "allow"
# significant_drop_tightening = "allow"
# wildcard_imports = "allow"
# must_use_candidate = "allow"
